--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 <body>
   <h1 class="top-header">Discover hidden places in the world around you</h1> <br> 
+  <div style="text-align: center;" ><a href="url" class="header-link">Donwload Excursion (Coming soon!)</a></div> <br><br>
+  <video width="404" height="720" autoplay muted loop>
+    <source src="assets/excursion.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
+
+  <h1 class="second-header">Your personal travel guide</h1>
+  <p class="text">Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <img src="assets/camp.jpg"> <br> <br>
+  <img class="phone" src="assets/phone.png"> <br> <br>
+  <h1 class="top-header">Coming Soon for iPhone and Andoid</h1> 
   <div style="text-align: center;"><a href="url" class="header-link">Donwload Excursion (Coming soon!)</a></div>
+  <p class="text right">&copy;Excursion</p>
 </body>
 </html>
